tests/include_suppressed/include_suppressed.exp
Without --include-suppressed
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:3:2
   3| (123: string); // Normal error
       ^^^ [1]

References:
   test.js:3:7
   3| (123: string); // Normal error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Suppression is missing a code. Please update this suppression to use an error code: `$FlowFixMe[<CODE>]` [InferError]

   8| // $FlowFixMe - unused suppression comment
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 2 errors


With --include-suppressed
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:3:2
   3| (123: string); // Normal error
       ^^^ [1]

References:
   test.js:3:7
   3| (123: string); // Normal error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:6:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:6:2
   6| (123: string); // Suppressed error
       ^^^ [1]

References:
   test.js:6:7
   6| (123: string); // Suppressed error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Suppression is missing a code. Please update this suppression to use an error code: `$FlowFixMe[<CODE>]` [InferError]

   8| // $FlowFixMe - unused suppression comment
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 3 errors


JSON without --include-suppressed
{
  "errors":[
    {
      "error_codes":["incompatible-type"],
      "extra":[
        {
          "message":[
            {
              "context":null,
              "descr":"References:",
              "end":0,
              "endline":0,
              "line":0,
              "path":"",
              "start":1,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Normal error",
              "descr":"[1]",
              "end":4,
              "endline":3,
              "line":3,
              "loc":{
                "end":{"column":4,"line":3,"offset":14},
                "source":"test.js",
                "start":{"column":2,"line":3,"offset":11},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":2,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Normal error",
              "descr":"[2]",
              "end":12,
              "endline":3,
              "line":3,
              "loc":{
                "end":{"column":12,"line":3,"offset":22},
                "source":"test.js",
                "start":{"column":7,"line":3,"offset":16},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":7,
              "type":"Blame"
            }
          ]
        }
      ],
      "kind":"infer",
      "level":"error",
      "message":[
        {
          "context":"(123: string); // Normal error",
          "descr":"Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]",
          "end":4,
          "endline":3,
          "line":3,
          "loc":{
            "end":{"column":4,"line":3,"offset":14},
            "source":"test.js",
            "start":{"column":2,"line":3,"offset":11},
            "type":"SourceFile"
          },
          "path":"test.js",
          "start":2,
          "type":"Blame"
        }
      ],
      "suppressions":[]
    },
    {
      "error_codes":[],
      "kind":"infer",
      "level":"error",
      "message":[
        {
          "context":"// $FlowFixMe - unused suppression comment",
          "descr":"Suppression is missing a code. Please update this suppression to use an error code: `$FlowFixMe[<CODE>]` [InferError]",
          "end":42,
          "endline":8,
          "line":8,
          "loc":{
            "end":{"column":42,"line":8,"offset":153},
            "source":"test.js",
            "start":{"column":1,"line":8,"offset":111},
            "type":"SourceFile"
          },
          "path":"test.js",
          "start":1,
          "type":"Blame"
        }
      ],
      "suppressions":[]
    }
  ],
  "jsonVersion":"1",
  "passed":false
}


JSON with --include-suppressed
{
  "errors":[
    {
      "error_codes":["incompatible-type"],
      "extra":[
        {
          "message":[
            {
              "context":null,
              "descr":"References:",
              "end":0,
              "endline":0,
              "line":0,
              "path":"",
              "start":1,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Normal error",
              "descr":"[1]",
              "end":4,
              "endline":3,
              "line":3,
              "loc":{
                "end":{"column":4,"line":3,"offset":14},
                "source":"test.js",
                "start":{"column":2,"line":3,"offset":11},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":2,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Normal error",
              "descr":"[2]",
              "end":12,
              "endline":3,
              "line":3,
              "loc":{
                "end":{"column":12,"line":3,"offset":22},
                "source":"test.js",
                "start":{"column":7,"line":3,"offset":16},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":7,
              "type":"Blame"
            }
          ]
        }
      ],
      "kind":"infer",
      "level":"error",
      "message":[
        {
          "context":"(123: string); // Normal error",
          "descr":"Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]",
          "end":4,
          "endline":3,
          "line":3,
          "loc":{
            "end":{"column":4,"line":3,"offset":14},
            "source":"test.js",
            "start":{"column":2,"line":3,"offset":11},
            "type":"SourceFile"
          },
          "path":"test.js",
          "start":2,
          "type":"Blame"
        }
      ],
      "suppressions":[]
    },
    {
      "error_codes":[],
      "kind":"infer",
      "level":"error",
      "message":[
        {
          "context":"// $FlowFixMe - unused suppression comment",
          "descr":"Suppression is missing a code. Please update this suppression to use an error code: `$FlowFixMe[<CODE>]` [InferError]",
          "end":42,
          "endline":8,
          "line":8,
          "loc":{
            "end":{"column":42,"line":8,"offset":153},
            "source":"test.js",
            "start":{"column":1,"line":8,"offset":111},
            "type":"SourceFile"
          },
          "path":"test.js",
          "start":1,
          "type":"Blame"
        }
      ],
      "suppressions":[]
    },
    {
      "error_codes":["incompatible-type"],
      "extra":[
        {
          "message":[
            {
              "context":null,
              "descr":"References:",
              "end":0,
              "endline":0,
              "line":0,
              "path":"",
              "start":1,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Suppressed error",
              "descr":"[1]",
              "end":4,
              "endline":6,
              "line":6,
              "loc":{
                "end":{"column":4,"line":6,"offset":79},
                "source":"test.js",
                "start":{"column":2,"line":6,"offset":76},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":2,
              "type":"Blame"
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Suppressed error",
              "descr":"[2]",
              "end":12,
              "endline":6,
              "line":6,
              "loc":{
                "end":{"column":12,"line":6,"offset":87},
                "source":"test.js",
                "start":{"column":7,"line":6,"offset":81},
                "type":"SourceFile"
              },
              "path":"test.js",
              "start":7,
              "type":"Blame"
            }
          ]
        }
      ],
      "kind":"infer",
      "level":"error",
      "message":[
        {
          "context":"(123: string); // Suppressed error",
          "descr":"Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]",
          "end":4,
          "endline":6,
          "line":6,
          "loc":{
            "end":{"column":4,"line":6,"offset":79},
            "source":"test.js",
            "start":{"column":2,"line":6,"offset":76},
            "type":"SourceFile"
          },
          "path":"test.js",
          "start":2,
          "type":"Blame"
        }
      ],
      "suppressions":[
        {
          "loc":{
            "end":{"column":32,"line":5,"offset":74},
            "source":"test.js",
            "start":{"column":1,"line":5,"offset":42},
            "type":"SourceFile"
          }
        }
      ]
    }
  ],
  "jsonVersion":"1",
  "passed":false
}


Server without --include-suppressed
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:3:2
   3| (123: string); // Normal error
       ^^^ [1]

References:
   test.js:3:7
   3| (123: string); // Normal error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Suppression is missing a code. Please update this suppression to use an error code: `$FlowFixMe[<CODE>]` [InferError]

   8| // $FlowFixMe - unused suppression comment
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 2 errors


Server with --include-suppressed
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:3:2
   3| (123: string); // Normal error
       ^^^ [1]

References:
   test.js:3:7
   3| (123: string); // Normal error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:6:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:6:2
   6| (123: string); // Suppressed error
       ^^^ [1]

References:
   test.js:6:7
   6| (123: string); // Suppressed error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Suppression is missing a code. Please update this suppression to use an error code: `$FlowFixMe[<CODE>]` [InferError]

   8| // $FlowFixMe - unused suppression comment
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 3 errors

